@@ -1,10 +1,10 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.025
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Algorithm::Backoff::Exponential" => "0.006";
 requires "Clone" => "0";
 requires "Config::GitLike" => "1.15";
-requires "DBI" => "0";
+requires "DBI" => "1.631";
 requires "DateTime" => "1.04";
 requires "DateTime::TimeZone" => "0";
 requires "Devel::StackTrace" => "1.30";
