@@ -88,7 +88,7 @@ has dbh => (
             Callbacks             => {
                 connected => sub {
                     my $dbh = shift;
-                    $dbh->do("SET SESSION $_") for (
+                    $dbh->do("SET SESSION $_") or return for (
                         q{character_set_client   = 'utf8'},
                         q{character_set_server   = 'utf8'},
                         ($dbh->{mysql_serverversion} || 0 < 50500 ? () : (q{default_storage_engine = 'InnoDB'})),
@@ -104,15 +104,6 @@ has dbh => (
                             error_for_division_by_zero
                         )) . q{'},
                     );
-                    if (!$dbh->{mysql_serverversion} && DBI->VERSION < 1.631) {
-                        # Prior to 1.631, callbacks were inner handles and
-                        # mysql_* aren't set yet. So set InnoDB in a try block.
-                        try {
-                            $dbh->do(q{SET SESSION default_storage_engine = 'InnoDB'});
-                        };
-                        # https://www.nntp.perl.org/group/perl.dbi.dev/2013/11/msg7622.html
-                        $dbh->set_err(undef, undef) if $dbh->err;
-                    }
                     return;
                 },
             },
@@ -277,7 +268,7 @@ has initialized => (
     }
 );
 
-sub initialize {
+sub _initialize {
     my $self   = shift;
     hurl engine => __x(
         'Sqitch database {database} already initialized',
