@@ -4,7 +4,7 @@ use 5.010;
 use strict;
 use warnings;
 use utf8;
-use DBI;
+use DBI 1.631;
 use Moo::Role;
 use Try::Tiny;
 use App::Sqitch::X qw(hurl);
@@ -22,6 +22,17 @@ requires '_char2ts';
 requires '_listagg_format';
 requires '_no_table_error';
 requires '_handle_lookup_index';
+requires '_no_registry';
+requires 'initialized';
+
+# Called on connect if the registry schema does not exist.
+sub _handle_no_registry {
+    my ($self, $dbh) = @_;
+    # https://www.nntp.perl.org/group/perl.dbi.dev/2013/11/msg7622.html
+    $dbh->set_err(undef, undef);
+    $self->_no_registry(1);
+    return;
+}
 
 after use_driver => sub {
     DBI->trace(1) if $_[0]->sqitch->verbosity > 2;
